--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,9 @@ name: build
 
 on:
   workflow_dispatch:
+    inputs:
+      package_version:
+        required: false
   schedule:
   - cron: '55 * * * *'
 
@@ -9,7 +12,7 @@ jobs:
   version:
     runs-on: ubuntu-latest
     outputs:
-      package_version: ${{ steps.version.outputs.package_version }}
+      package_version: ${{ github.event.inputs.package_version || steps.version.outputs.package_version }}
     steps:
       - uses: actions/checkout@v3
       - id: version
